Closed Bug 1233845 Opened 8 years ago Closed 8 years ago

Crash in HttpChannelParent::SynthesizeResponse

Categories

(Core :: DOM: Service Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox44 --- fixed
firefox45 --- fixed
firefox46 --- fixed
b2g-v2.5 --- fixed

People

(Reporter: jdm, Assigned: jdm)

References

Details

(Keywords: crash, reproducible, topcrash)

Crash Data

Attachments

(1 file, 1 obsolete file)

This is the tracking issue for a bandaid solution to bug 1219469.
Attachment #8700181 - Attachment is obsolete: true
Attachment #8700184 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/2b22358166d957ba25bb11264f75d3c3ecd945c9
Bug 1233845 - Report an interception error and cancel the HTTP channel when encountering a known topcrash situation. r=ehsan
https://hg.mozilla.org/mozilla-central/rev/2b22358166d9
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Josh, do you mind nominating this for branches please?
Blocks: 1234310
Comment on attachment 8700184 [details] [diff] [review]
Report an interception error and cancel the HTTP channel when encountering a known topcrash situation

Approval Request Comment
[Feature/regressing bug #]: 1137287
[User impact if declined]: Crashes when e10s is enabled and user visits certain sites that use ServiceWorkers and HTTP redirections.
[Describe test coverage new/current, TreeHerder]: See bug 1234310 and accompanying uplift request.
[Risks and why]: Low - this turns a guaranteed crasher into a situation that could behave surprisingly for developers, but adds an explanatory message to the web console.
[String/UUID change made/needed]: None; the new message is unlocalized due to its specialized nature.
Attachment #8700184 - Flags: approval-mozilla-beta?
Attachment #8700184 - Flags: approval-mozilla-aurora?
Comment on attachment 8700184 [details] [diff] [review]
Report an interception error and cancel the HTTP channel when encountering a known topcrash situation

Fix a crash, taking it.
Attachment #8700184 - Flags: approval-mozilla-beta?
Attachment #8700184 - Flags: approval-mozilla-beta+
Attachment #8700184 - Flags: approval-mozilla-aurora?
Attachment #8700184 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: