Bug 1233845 - Report an interception error and cancel the HTTP channel when encountering a known topcrash situation. r=ehsan a=sylvestre

--HG--
extra : commitid : 2SPFJosjNVg
extra : source : 2b22358166d957ba25bb11264f75d3c3ecd945c9