netwerk/protocol/http/HttpChannelChild.h
@@ -153,6 +153,8 @@ protected:
   bool RecvIssueDeprecationWarning(const uint32_t& warning,
                                    const bool& asError) override;
 
+  bool RecvReportRedirectionError() override;
+
   bool GetAssociatedContentSecurity(nsIAssociatedContentSecurity** res = nullptr);
   virtual void DoNotifyListenerCleanup() override;
 
